<resources>
    <string name="app_name">api_getandpost</string>
    <string name="enter_the_ip_address_of_server">Enter the ip address of Server</string>
    <string name="ping">PING</string>
    <string name="next">next</string>
    <string name="click">Click</string>
    <string name="enter_the_name_of_the_person">Enter the name of the person.</string>
    <string name="getting_your_image_ready">Getting your image ready !</string>
    <string name="upload">UPLOAD</string>
    <string name="detect">DETECT</string>
    <string name="name">NAME</string>
    <string name="enter_the_ip_address_of_the_server">Enter the IP address of the server below:</string>
    <string name="enter_the_port_number_of_the_host">Enter the PORT number of the Host below:</string>
    <string name="proceed">Proceed</string>
    <string name="port_number">PORT Number</string>
    <string name="ipv4_address">IPv4 Address</string>
    <string name="api_server_details">API Server Details</string>
</resources>
